Visually fix py2.7 compatibility

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
 
 envlist=
-    py{35,36}-django110
+    py{27,35,36}-django{110,120}
+
 
 [testenv]
 
 deps =
     django110: django>=1.10,<1.11
+    django120: django>=1.11,<1.12
     coverage
     mock
 
