--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 
 envlist=
-    py{27,35,36}-django{110,120}
+    py{27,37}-django{110,120}
+    py{37}-django{22}
 
 
 [testenv]
@@ -9,6 +10,7 @@ envlist=
 deps =
     django110: django>=1.10,<1.11
     django120: django>=1.11,<1.12
+    django22: django>=2.2
     coverage
     mock
 
